--- a/force-app/main/default/lwc/bearSupervisor/bearSupervisor.html
+++ b/force-app/main/default/lwc/bearSupervisor/bearSupervisor.html
@@ -12,7 +12,7 @@
 			<!-- Data failed to load -->
 			<template if:true={bear.error}>
 				<div class="slds-text-color_error">
-				An Error Occur While Loading te bear record
+			An Error Occur While Creating  Bear Records 
 				</div>
 			</template>
 		</div>
